--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,8 +25,6 @@
 
     @media @mobile {
       flex-direction: column;
-      justify-content: center;
-      width: 90%;
       margin: 30px 5%;
     }
 
@@ -36,6 +34,7 @@
 
       @media @mobile {
         width: 100%;
+        padding: 0;
       }
     }
 
@@ -50,6 +49,10 @@
 
       img {
         border-radius: 10px;
+
+        @media @mobile {
+          width: 100%;
+        }
       }
     }
   }
@@ -96,9 +99,9 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
-    margin: 0 5%;
     @media @mobile {
       flex-direction: column;
+      margin: 0 5%;
     }
 
     .destination {
@@ -106,9 +109,9 @@
       margin-bottom: 30px;
 
       @media @mobile {
-        width: 74%;
-        margin-left: 12%;
-        margin-right: 12%;
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
       }
     }
   }
@@ -119,6 +122,7 @@
     @media @mobile {
       background-color: @button-bg;
       margin: 0 auto;
+      font-size: 2rem;
     }
   }
 }// home
